STYLE - Fixes the overflow of big images in portfolio section.

--- a/less/agency.less
+++ b/less/agency.less
@@ -415,6 +415,8 @@ section {
             position: relative;
             max-width: 400px;
             margin: 0 auto;
+            height: 225px;
+            overflow: hidden;
             .portfolio-hover {
                 background: fade(@brand-primary, 90%);
                 position: absolute;
